fix: medium and info issues